p3/confs/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot
  template:
    metadata:
      labels:
        app: iot
    spec:
      containers:
        - name: iot
          image: 'mfzeroseven/iot:v1'
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
