p3/confs/service.yml
apiVersion: v1
kind: Service
metadata:
  name: iot
  namespace: dev
spec:
  selector:
    app: iot
  ports:
    - port: 8888
      targetPort: 8888
  type: ClusterIP
